fix squashed title on narrow screens. Percy FTW!

--- a/themes/uozu-xmin/static/css/style.css
+++ b/themes/uozu-xmin/static/css/style.css
@@ -4,6 +4,9 @@ body {
   padding: 1em;
   line-height: 1.5em;
 }
+h1 {
+  line-height: 1em;
+}
 h1:not(.page_title) {
   line-height: 1em;
   padding-top: 1em;
